psoc student pack/psoc_code_base/CS301_Class.cydsn/BUILD.log
--------------- Build Started: 10/10/2023 14:55:32 Project: CS301_Class, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -O0 -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:141:21: error: assignment to expression with array type
     instructionList = findPath(map, food_list);
                     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 10/10/2023 14:55:34 ---------------
